# wayclick

./: .gitignore  AI_BOOTSTRAP.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  fuzz  mise.toml
.github/workflows/: ci.yml
config/: init.lua
crates/wayclick-core/: Cargo.toml
crates/wayclick-core/benches/: action_execution.rs  config_loading.rs  ipc_framing.rs
crates/wayclick-core/src/: config.rs  config_watcher.rs  engine.rs  evdev_monitor.rs  evdev_source.rs  event_bus.rs  input_backend.rs  ipc.rs  lib.rs  logger.rs  lua_api.rs  mutex_ext.rs  pointer_backend.rs  uinput_backend.rs  wlr_pointer.rs
crates/wayclick-core/src/focus_tracker/: hyprland.rs  mod.rs  none.rs  sway.rs
crates/wayclick-evdev-dump/: Cargo.toml
crates/wayclick-evdev-dump/src/: main.rs
crates/wayclick-input-viz/: Cargo.toml  README.md
crates/wayclick-input-viz/src/: colors.rs  events.rs  main.rs  particles.rs  perf.rs
crates/wayclick-input-viz/src/ui/: mod.rs  shaders.rs
crates/wayclick-ipc-client/: Cargo.toml
crates/wayclick-ipc-client/src/: async_client.rs  frame.rs  lib.rs  socket.rs  sync_client.rs  types.rs
crates/wayclick-ipc-client/tests/: frame_tests.rs  socket_tests.rs  sync_client_tests.rs  types_tests.rs
crates/wayclick-tui/: Cargo.toml
crates/wayclick-tui/src/: main.rs
crates/wayclickctl/: Cargo.toml
crates/wayclickctl/src/: main.rs
crates/wayclickd/: Cargo.toml
crates/wayclickd/src/: main.rs
deployment/config/: init.lua
deployment/systemd/: wayclickd.service
docs/: ARCHITECTURE.md  BUILDING.md  CONFIG_SCHEMA.md  CONTRIBUTING.md  DESKTOP_ENVIRONMENTS.md  DEVICE_MATCHING.md  FAQ.md  FEATURE_MATRIX.md  HYPRLAND_BINDINGS.md  IPC.md  PERMISSIONS.md  QUICKSTART.md  ROADMAP.md  SECURITY.md  THEMES.md  TROUBLESHOOTING.md
docs/superpowers/plans/: 2026-05-03-consolidate-ipc-clients.md
examples/: README.md  click_at_cards.lua  morse_clicker.lua  scroll_remap.lua
extras/waybar/: README.md  config.jsonc  style.css
extras/wayclick-playground/: Cargo.toml  README.md
extras/wayclick-playground/src/: app_state.rs  colors.rs  events.rs  ipc_client.rs  main.rs  particles.rs  perf.rs
extras/wayclick-playground/src/ui/: mod.rs  shaders.rs
extras/wayclick-recorder/: Cargo.toml  README.md
extras/wayclick-recorder/src/: cli.rs  emitter.rs  filter.rs  keymap.rs  lib.rs  main.rs  recorder.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_loader.rs  fuzz_device_match.rs  fuzz_ipc_frame.rs
scripts/: bench-report.sh  check_permissions.sh  dev.sh  install.sh
systemd/: wayclickd.service
tests/: Cargo.toml
tests/e2e/: Cargo.toml
tests/e2e/src/: e2e_actions.rs  e2e_events.rs  e2e_ipc.rs  helpers.rs  lib.rs
tests/fuzz/: Cargo.toml
tests/fuzz/fuzz_targets/: fuzz_config_loader.rs  fuzz_device_match.rs  fuzz_ipc_frame.rs
tests/src/: e2e_actions.rs  e2e_dynamic.rs  e2e_events.rs  e2e_ipc.rs  helpers.rs  lib.rs
udev/: 99-wayclick.rules
