[workspace]
members = [
  "crates/wayclick-core",
  "crates/wayclickd",
  "crates/wayclickctl",
  "crates/wayclick-tui",
  "crates/wayclick-evdev-dump",
  "crates/wayclick-input-viz",
  "tests",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nalcorso/wayclick"
homepage = "https://github.com/nalcorso/wayclick"
rust-version = "1.85.0"

[workspace.dependencies]
wayclick-core = { path = "crates/wayclick-core" }
mlua = { version = "0.10", features = ["lua54", "vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
nix = { version = "0.29", features = ["ioctl", "signal", "socket", "uio", "poll", "user"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
libc = "0.2"
