[package]
name = "wayclick-core"
version.workspace = true
edition.workspace = true

[dependencies]
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
nix = { workspace = true }
rand = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
integration = []
