[package]
name = "wayclick-core"
description = "Core library for wayclick: config, engine, Lua API, IPC, and input backends"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
nix = { workspace = true }
rand = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
integration = []
