[package]
name = "wayclick-core"
description = "Core library for wayclick: config, engine, Lua API, IPC, and input backends"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
nix = { workspace = true }
rand = { workspace = true }
libc = { workspace = true }
wayclick-ipc-client = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
integration = []
bench-internals = []

[[bench]]
name = "action_execution"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "config_loading"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "ipc_framing"
harness = false
