[package]
name = "wayclick-evdev-dump"
description = "Device diagnostic tool for identifying input devices"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wayclick-core = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
