[package]
name = "wayclick-ipc-client"
description = "Reusable IPC client for the wayclick daemon (frame protocol, sync + async clients)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
