[package]
name = "wayclick-tui"
description = "Terminal UI dashboard for the wayclick daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wayclick-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde_json = { workspace = true }
