[package]
name = "wayclickctl"
description = "CLI control tool for the wayclick daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wayclick-core = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
