[package]
name = "wayclickd"
description = "Wayclick daemon — Lua-configurable mouse automation for Linux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wayclick-core = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
nix = { workspace = true }
