[package]
name = "wayclick-playground"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Visual input testing tool for wayclick — particle effects, event log, performance counters"
include = ["src/**/*", "assets/**/*"]

[[bin]]
name = "wayclick-playground"
path = "src/main.rs"

[dependencies]
macroquad = "0.4"
serde_json = "1"
wayclick-ipc-client = { workspace = true }
