[package]
name = "wayclick-recorder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Macro recorder for wayclick: capture input events scoped to a focused window and emit replay-able Lua snippets"
include = ["src/**/*", "README.md"]

[[bin]]
name = "wayclick-recorder"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
wayclick-ipc-client = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
nix = { workspace = true }
