[package]
name = "wayclick-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integration tests for wayclick"
publish = false

[dependencies]
wayclick-core = { workspace = true }
wayclick-ipc-client = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
wayclick-core = { workspace = true }
wayclick-ipc-client = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
